@@ -5,7 +5,7 @@ if ($object->xpdo) {
             /** @var modX $modx */
             $modx =& $object->xpdo;
 
-            $modx->updateCollection('modResource', array('hide_children_in_tree	' => 1), array('class_key' => 'SelectionContainer'));
+            $modx->updateCollection('modResource', array('hide_children_in_tree' => 1), array('class_key' => 'SelectionContainer'));
 
             break;
     }
